2002-02-13  Ettore Perazzoli  <ettore@ximian.com>

	* src/libsoup/soup-ntlm.c (soup_ntlm_response): Set `decodelen' to
	be 5 bytes less than the challenge's length to avoid overflowing
	the input buffer.

2002-02-13  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-queue.c (soup_queue_add_request,
	soup_queue_remove_request, soup_queue_first_request,
	soup_queue_next_request): Routines to all simulataneous iteration
	and modification of the active request list. Fixes Ximian 14030.
	(soup_idle_handle_new_requests): Use the above functions.
	(soup_queue_message): Likewise.
	(soup_queue_shutdown): Likewise.

	* src/libsoup/soup-message.c (soup_message_cleanup): Use
	soup_queue_remove_request.

2002-02-10  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-transfer.c (soup_transfer_read_cb): Temporary
	fix for 100% cpu usage as HUPs are not being caught in some cases.

2002-02-08  Dan Winship  <danw@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_write): Handle
	SSL_ERROR_WANT_READ here too. Fixes at least Ximian 19792 and
	maybe others.

2002-01-17  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-message.c: Add soup_message_get_http_version()
	function.

2002-01-08  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-error.h: Add SOUP_ERROR_MOVED_TEMPORARILY
	(which was in early HTTP1.1 and HTTP1.0 specs) defined to
	SOUP_ERROR_FOUND (its replacement).

	* configure.in: Use /usr/lib as the default location for nss and
	nspr libs. Also, NSS static libs are named differently from their
	dynamic version.

2002-01-08  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-transfer.c (issue_final_callback): Remove the
	gio sources from the reader before invoking the read_done
	callback, since the connection will be marked free before the
	user's callback is called, so if that callback posts another
	request synchronously, the callback will end up getting called
	back again when the new request finishes, which is wrong.
